--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github Test Project</title>
   </head>
-  <body></body>
+  <body>
+    <h1>This is heading one</h1>
+  </body>
 </html>
