modified index.html file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <h1>This is heading one</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore facilis voluptas, eius pariatur ea non placeat ducimus, dolores,
+      distinctio porro asperiores repudiandae. Officiis blanditiis earum sequi minima excepturi sint nihil.
+    </p>
   </body>
 </html>
