New Image Added

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore facilis voluptas, eius pariatur ea non placeat ducimus, dolores,
       distinctio porro asperiores repudiandae. Officiis blanditiis earum sequi minima excepturi sint nihil.
     </p>
+    <img src="img/pexels-kelian-pfleger-7367020.jpg" alt="" />
   </body>
 </html>
